# Autopy-ia

./: .replit  README-RENDER.md  pnpm-lock.yaml  pyproject.toml  render-build.sh  render.yaml  replit.md
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  autopy-python-backend.md
artifacts/api-server/: main.py  requirements.txt  start.sh
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/app/: config.py  database.py
artifacts/api-server/app/middleware/: auth.py
artifacts/api-server/app/models/: api_key.py  log.py
artifacts/api-server/app/routers/: chat.py  discord.py  health.py  images.py  models.py  openai_compat.py  status.py  user.py
artifacts/api-server/app/routers/admin/: dashboard.py  extra.py  keys.py  logs.py  models_admin.py  verify.py
artifacts/api-server/app/schemas/: admin.py  chat.py  common.py  images.py
artifacts/api-server/app/services/: ai_service.py  cache.py  moderation.py  rate_limiter.py
artifacts/api-server/app/services/providers/: base.py  gemini_provider.py  groq_provider.py  openai_provider.py  (+1 more)
artifacts/web/: index.html  vite.config.ts
artifacts/web/.replit-artifact/: artifact.toml
artifacts/web/public/: autopy_discord_cog.py
artifacts/web/src/: App.tsx  index.css
artifacts/web/src/components/: error-boundary.tsx  layout.tsx
artifacts/web/src/hooks/: use-toast.ts
artifacts/web/src/lib/: auth.ts
artifacts/web/src/pages/: dashboard.tsx  docs.tsx  landing.tsx  playground.tsx  status.tsx
attached_assets/: ia_1784494754177.py
lib/api-spec/: openapi.yaml
