[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.0.0",
    "fastapi>=0.115.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "psutil>=6.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]
